--- a/studio/app/views/main.scala.html
+++ b/studio/app/views/main.scala.html
@@ -1,15 +1,26 @@
-@(title: String)(content: Html)
+@(title: String)(styles: Html)(scripts: Html)(content: Html)
 
 <!DOCTYPE html>
 
-<html>
+<html ng-app="analyticsApp">
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
+        <base href="/">
+
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("bower_components/bootstrap/dist/css/bootstrap.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/site.css")">
+        @styles
     </head>
     <body>
         @content
     </body>
+    <script type="text/javascript" src="@routes.Assets.at("bower_components/jquery/dist/jquery.min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("bower_components/bootstrap/dist/js/bootstrap.min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("bower_components/angular/angular.min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("bower_components/angular-route/angular-route.min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("bower_components/angular-sanitize/angular-sanitize.min.js")"></script>
+
+    <script type="text/javascript" src="@routes.Assets.at("app.js")"></script>
+
+    @scripts
 </html>
