reorganizing angular js files

--- a/studio/app/views/main.scala.html
+++ b/studio/app/views/main.scala.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="@routes.Assets.at("bower_components/angular-route/angular-route.min.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("bower_components/angular-sanitize/angular-sanitize.min.js")"></script>
 
-    <script type="text/javascript" src="@routes.Assets.at("app.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("scripts/app.js")"></script>
 
     @scripts
 </html>
