--- a/studio/app/views/main.scala.html
+++ b/studio/app/views/main.scala.html
@@ -2,12 +2,13 @@
 
 <!DOCTYPE html>
 
-<html ng-app="analyticsApp">
+<html>
     <head>
         <title>@title</title>
         <base href="/">
 
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("bower_components/bootstrap/dist/css/bootstrap.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("bower_components/font-awesome/css/font-awesome.min.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/site.css")">
         @styles
     </head>
@@ -19,8 +20,6 @@
     <script type="text/javascript" src="@routes.Assets.at("bower_components/angular/angular.min.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("bower_components/angular-route/angular-route.min.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("bower_components/angular-sanitize/angular-sanitize.min.js")"></script>
-
-    <script type="text/javascript" src="@routes.Assets.at("scripts/app.js")"></script>
 
     @scripts
 </html>
