--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -4,7 +4,8 @@
 
 body {
     padding-top: 50px;
-    font-family:"Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Roboto, arial, sans-serif;
+    background-color: #e5e5e5;
 }
 
 /*
@@ -21,6 +22,7 @@ body {
  * Hide default border to remove 1px line.
  */
 .navbar-fixed-top {
+    background-color: #f5f5f5;
     border: 0;
 }
 
@@ -43,7 +45,7 @@ body {
         padding: 20px;
         overflow-x: hidden;
         overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-        background-color: #f5f5f5;
+        background-color: #ffffff;
         border-right: 1px solid #eee;
     }
 }
