--- a/studio/public/templates/studio.html
+++ b/studio/public/templates/studio.html
@@ -3,4 +3,8 @@
 </div>
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
+    <diagram view-model="diagramViewModel"
+             style="margin: 5px; width: 100%; height: 1000px;">
+    </diagram>
+
 </div>
