cleaned up diagram class names

--- a/studio/public/scripts/components/diagram/diagram.html
+++ b/studio/public/scripts/components/diagram/diagram.html
@@ -3,12 +3,12 @@
         ng-mousedown="mouseDown($event)"
         ng-mousemove="mouseMove($event)">
 
-    <g class="block"
+    <g class="block-group"
             ng-repeat="block in diagram.blocks"
             ng-mousedown="blockMouseDown($event, block)"
             ng-attr-transform="translate({{block.x()}}, {{block.y()}})">
 
-        <rect ng-attr-class="{{block.selected() && 'block-selected' || (block == mouseOverNode && 'block-mouseover' || 'block-rect')}}"
+        <rect ng-attr-class="{{block.selected() && 'block-selected' || (block == mouseOverNode && 'block-mouseover' || 'block')}}"
               ry="6"
               rx="6"
               x="0"
@@ -65,7 +65,7 @@
               text-anchor="end"
               alignment-baseline="bottom">&#xf080</text>
 
-        <g class="connector"
+        <g class="connector-group"
                 ng-repeat="connector in block.inputConnectors">
                 <!--ng-mousedown="connectorMouseDown($event, block, connector, $index, true)"-->
 
@@ -78,7 +78,7 @@
             </text>-->
 
             <circle
-                    ng-attr-class="{{connector == mouseOverConnector && 'mouseover-connector' || 'connector-circle'}} {{block.stateClass()}}"
+                    ng-attr-class="{{connector == mouseOverConnector && 'connector-mouseover' || 'connector'}} {{block.stateClass()}}"
                     ng-attr-r="{{connectorRadius}}"
                     ng-attr-cx="{{connector.x()}}"
                     ng-attr-cy="{{connector.y()}}"
@@ -86,7 +86,7 @@
 
         </g>
 
-        <g class="connector"
+        <g class="connector-group"
                 ng-repeat="connector in block.outputConnectors">
                 <!--ng-mousedown="connectorMouseDown($event, block, connector, $index, false)"-->
 
@@ -100,7 +100,7 @@
             </text>-->
 
             <circle
-                    ng-attr-class="{{connector == mouseOverConnector && 'mouseover-connector' || 'connector-circle'}} {{block.stateClass()}}"
+                    ng-attr-class="{{connector == mouseOverConnector && 'connector-mouseover' || 'connector'}} {{block.stateClass()}}"
                     ng-attr-r="{{connectorRadius}}"
                     ng-attr-cx="{{connector.x()}}"
                     ng-attr-cy="{{connector.y()}}"
@@ -109,23 +109,23 @@
     </g>
 
     <g>
-        <g class="wire"
+        <g class="wire-group"
                 ng-repeat="wire in diagram.wires">
                 <!--ng-mousedown="wireMouseDown($event, wire)"-->
             <path
-                    ng-attr-class="{{connection.selected() && 'selected-wire' || (wire == mouseOverWire && 'mouseover-wire' || 'wire-line')}}"
+                    ng-attr-class="wire {{connection.selected() && 'wire-selected' || (wire == mouseOverWire && 'wire-mouseover' || 'wire-unselected')}}"
                     ng-attr-d="M {{wire.sourceCoordX()}}, {{wire.sourceCoordY()}}
                      C {{wire.sourceTangentX()}}, {{wire.sourceTangentY()}}
                        {{wire.targetTangentX()}}, {{wire.targetTangentY()}}
                        {{wire.targetCoordX()}}, {{wire.targetCoordY()}}">
             </path>
-            <circle ng-attr-class="{{wire.selected() && 'selected-wire-endpoint' || (wire == mouseOverWire && 'mouseover-wire-endpoint' || 'wire-endpoint')}}"
+            <circle ng-attr-class="{{wire.selected() && 'wire-endpoint-selected' || (wire == mouseOverWire && 'wire-endpoint-mouseover' || 'wire-endpoint')}}"
                     r="4"
                     ng-attr-cx="{{wire.sourceCoordX()}}"
                     ng-attr-cy="{{wire.sourceCoordY()}}">
             </circle>
 
-            <circle ng-attr-class="{{wire.selected() && 'selected-wire-endpoint' || (wire == mouseOverWire && 'mouseover-wire-endpoint' || 'wire-endpoint')}}"
+            <circle ng-attr-class="{{wire.selected() && 'wire-endpoint-selected' || (wire == mouseOverWire && 'wire-endpoint-mouseover' || 'wire-endpoint')}}"
                     r="4"
                     ng-attr-cx="{{wire.targetCoordX()}}"
                     ng-attr-cy="{{wire.targetCoordY()}}">
