--- a/studio/public/stylesheets/diagram.css
+++ b/studio/public/stylesheets/diagram.css
@@ -4,10 +4,11 @@
  * Blocks
  */
 
-.block { cursor: move; }
+.block-group { cursor: move; }
 
-.block-rect{ fill: #ffffff; stroke: #d8d8d8; stroke-width: 1; }
+.block{ fill: #ffffff; stroke: #d8d8d8; stroke-width: 1; }
 .block-selected{ fill: #ffffff; stroke: #7f7f7f; stroke-width: 1; }
+.block-mouseover{ fill: #ffffff; stroke: #7f7f7f; stroke-width: 1; }
 
 .block-header{ stroke: #d8d8d8; stroke-width: 1; }
 rect.block-config{ fill: #1f77b4; }
@@ -21,12 +22,21 @@ rect.block-config{ fill: #1f77b4; }
  * Connectors
  */
 
-.connector-circle { stroke-width: 1; }
+.connector { stroke-width: 1; }
+.connector-mouseover { stroke-width: 1; }
 circle.block-config{ stroke: #1f77b4; fill: #aec7e8; }
 
 /*
  * Wires
  */
 
-.wire-line { stroke: #989898; stroke-width: 4; fill: transparent; }
+.wire { stroke-width: 4; fill: transparent; }
+.wire-unselected { stroke: #989898; }
+.wire-selected { stroke: #989898; }
+.wire-mouseover { stroke: #989898; }
+
 .wire-endpoint { fill: #989898; }
+.wire-endpoint-selected { fill: #989898; }
+.wire-endpoint-mouseover { fill: #989898; }
+
+
