--- a/studio/app/views/main.scala.html
+++ b/studio/app/views/main.scala.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="@routes.Assets.at("bower_components/angular/angular.min.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("bower_components/angular-route/angular-route.min.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("bower_components/angular-sanitize/angular-sanitize.min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("bower_components/angular-animate/angular-animate.min.js")"></script>
 
     @scripts
 </html>
