--- a/studio/public/stylesheets/diagram.css
+++ b/studio/public/stylesheets/diagram.css
@@ -39,4 +39,15 @@ circle.block-config{ stroke: #1f77b4; fill: #aec7e8; }
 .wire-endpoint-selected { fill: #989898; }
 .wire-endpoint-mouseover { fill: #989898; }
 
+/*
+ * Navigation
+ */
 
+.navigation-page { position: absolute; width: 100%; top: 0; left: 0; }
+.navigation-item { cursor: pointer; background-color: #ffffff; margin-bottom: 5px; padding: 8px 6px 8px 6px; border: 1px solid #d8d8d8; }
+
+.navigation-item span { margin-left: 10px; }
+.navigation-item i { color: #989898; }
+
+.navigation-page.ng-enter { -webkit-animation: slideInRight 0.4s; }
+.navigation-page.ng-hide-add { -webkit-animation: slideOutLeft 0.4s; }
