--- a/studio/public/templates/studio.html
+++ b/studio/public/templates/studio.html
@@ -1,5 +1,7 @@
 <div class="col-sm-3 col-md-2 sidebar">
 
+    <div navigation="definitions"></div>
+
 </div>
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
