--- a/studio/app/views/main.scala.html
+++ b/studio/app/views/main.scala.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("bower_components/bootstrap/dist/css/bootstrap.min.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("bower_components/font-awesome/css/font-awesome.min.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/site.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/animate.css")">
+
         @styles
     </head>
     <body>
@@ -21,6 +23,8 @@
     <script type="text/javascript" src="@routes.Assets.at("bower_components/angular-route/angular-route.min.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("bower_components/angular-sanitize/angular-sanitize.min.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("bower_components/angular-animate/angular-animate.min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("bower_components/angular-bootstrap/ui-bootstrap.min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js")"></script>
 
     @scripts
 </html>
