--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -2,105 +2,59 @@
  * Base structure
  */
 
-body {
-    padding-top: 50px;
-    font-family: Roboto, arial, sans-serif;
-    background-color: #e5e5e5;
+html, body { height: 100%; }
+
+body { font-family: Roboto, arial, sans-serif; background-color: #e5e5e5; overflow: hidden; }
+
+#studio-wrapper { width: 100%; height: 100%; -webkit-transform: translateX(0); transform: translateX(0); -webkit-transition: .3s ease all; transition: .3s ease all; }
+
+.navbar { background-color: #f5f5f5; border: 0; }
+.navbar-btn-text { margin: 0 5px 0 5px; }
+
+#studio-canvas { overflow-y: scroll; height: 100%; }
+
+#studio-wrapper.show-nav { -webkit-transform: translateX(200px); transform: translateX(200px); }
+
+#diagrams-menu { position: absolute; left: -200px; top: 0px; background-color: red; width:200px; height: 100% }
+
+
+#navigation {
+    position: absolute;
+    overflow-x: hidden;
+    top: 51px;
+    left: 0px;
+    width: 180px;
+    height: 500px;
+    background-color: white;
+    box-shadow: 0px 6px 12px rgba(0,0,0,0.175);
 }
+#navigation.ng-hide-add { -webkit-animation: fadeOut 0.6s; }
+#navigation.ng-hide-remove { -webkit-animation: fadeIn 0.6s; }
+
+.navigation-page { position: absolute; width: 100%; top: 0; left: 0; }
+.navigation-page.ng-enter { -webkit-animation: slideInRight 0.4s; }
+.navigation-page.ng-leave { -webkit-animation: slideOutRight 0.4s; }
+.navigation-page.ng-hide-add { -webkit-animation: slideOutLeft 0.4s; }
+.navigation-page.ng-hide-remove { -webkit-animation: slideInLeft 0.4s; }
+
+.navigation-header { font-weight: bold; }
+.navigation-item { cursor: pointer; padding: 8px 6px 8px 6px; border-bottom: 1px solid #d8d8d8; }
+.navigation-item span { margin-left: 10px; }
+.navigation-item i { color: #989898; }
+
+.navigation-definition { padding: 6px; }
+.navigation-definition button { margin-top: 6px; }
+.navigation-parameter { margin-bottom: 8px; }
+.navigation-parameter span { display: block; }
+.navigation-parameter input { display: block; width: 100%; }
 
 /*
- * Global add-ons
+ * Ghost
  */
 
-.sub-header {
-    padding-bottom: 10px;
-    border-bottom: 1px solid #eee;
-}
-
-/*
- * Top navigation
- * Hide default border to remove 1px line.
- */
-.navbar-fixed-top {
-    background-color: #f5f5f5;
-    border: 0;
-}
-
-/*
- * Sidebar
- */
-
-/* Hide for mobile, show later */
-.sidebar {
-    display: none;
-}
-@media (min-width: 768px) {
-    .sidebar {
-        position: fixed;
-        top: 51px;
-        bottom: 0;
-        left: 0;
-        z-index: 1000;
-        display: block;
-        padding: 20px;
-        overflow-x: hidden;
-        overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-        background-color: #ffffff;
-        border-right: 1px solid #eee;
-    }
-}
-
-/* Sidebar navigation */
-.nav-sidebar {
-    margin-right: -21px; /* 20px padding + 1px border */
-    margin-bottom: 20px;
-    margin-left: -20px;
-}
-.nav-sidebar > li > a {
-    padding-right: 20px;
-    padding-left: 20px;
-}
-.nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
-    color: #fff;
-    background-color: #428bca;
-}
+#ghost { position: absolute; background-color: #ffffff; z-index: 1001; opacity: 0.6; border-radius: 10px; }
 
 
-/*
- * Main content
- */
-
-.main {
-    padding: 20px;
-}
-@media (min-width: 768px) {
-    .main {
-        padding-right: 40px;
-        padding-left: 40px;
-    }
-}
-.main .page-header {
-    margin-top: 0;
-}
 
 
-/*
- * Placeholder dashboard ideas
- */
 
-.placeholders {
-    margin-bottom: 30px;
-    text-align: center;
-}
-.placeholders h4 {
-    margin-bottom: 0;
-}
-.placeholder {
-    margin-bottom: 20px;
-}
-.placeholder img {
-    display: inline-block;
-    border-radius: 50%;
-}
