--- a/studio/app/views/main.scala.html
+++ b/studio/app/views/main.scala.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/bootstrap/css/bootstrap.min.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/font-awesome/css/font-awesome.min.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/site.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/animate.css")">
         @styles
     </head>
     <body>
@@ -19,5 +20,8 @@
     <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular.min.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-route.min.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-sanitize.min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-animate.min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-bootstrap/ui-bootstrap.min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-bootstrap/ui-bootstrap-tpls.min.js")"></script>
     @scripts
 </html>
